--- a/ProcurementTracker/Pages/Procurements/Index.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Index.cshtml
@@ -14,7 +14,7 @@
 	</p>
 	<div class="card bg-light mb-2 h-20">
 		<div class="card-body">
-			<form asp-page-handler="search" method="post">
+			<form method="post">
 				<div class="form-row">
 					<div class="form-group col-12">
 						<label><small>Search</small></label>
@@ -31,20 +31,19 @@
 					</div>
 					<div class="form-group col-4">
 						<label><small>Procurement Method</small></label>
-						<select id="procurementMethod" class="form-control form-control-sm">
+						<select asp-for="ProcurementMethod" value="@Model.ProcurementMethod" class="form-control form-control-sm" asp-items="@Model.ProcurementMethods">
 							<option selected>Choose...</option>
-							<option>...</option>
 						</select>
 					</div>
 					<div class="form-group col-4">
 						<label><small>Status</small></label>
-						<select id="status" class="form-control form-control-sm">
+						<select asp-for="ProcurementStatus" value="@Model.ProcurementStatus" class="form-control form-control-sm" asp-items="@Model.ProcurementStatuses">
 							<option selected>Choose...</option>
-							<option>...</option>
 						</select>
 					</div>
 				</div>
-				<button type="submit" class="btn btn-primary btn-sm">Search</button>
+				<button asp-page-handler="search" class="btn btn-primary btn-sm">Search</button>
+				<button asp-page-handler="clear" class="btn btn-light btn-sm">Clear</button>
 			</form>
 		</div>
 	</div>
