--- a/ProcurementTracker/Pages/Procurements/Index.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Index.cshtml
@@ -24,9 +24,10 @@
 				<div class="form-row">
 					<div class="form-group col-4">
 						<label><small>Plan</small></label>
-						<select id="plan" class="form-control form-control-sm">
+						<select asp-for="Plan" class="form-control form-control-sm">
 							<option selected>Choose...</option>
-							<option>...</option>
+							<option>BUDGET</option>
+							<option>PROCUREMENT PLAN</option>
 						</select>
 					</div>
 					<div class="form-group col-4">
