Closes #35 - Present newline character in the procurement details

--- a/ProcurementTracker/Pages/Procurements/Details.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Details.cshtml
@@ -98,7 +98,7 @@
                         @Html.DisplayNameFor(model => model.Procurement.Description)
                     </dt>
                     <dd class="col-sm-9">
-                        @Html.DisplayFor(model => model.Procurement.Description)
+                        <span style="white-space: pre-wrap">@Html.DisplayFor(model => model.Procurement.Description)</span>
                     </dd>
                     <dt class="col-sm-3">
                         @Html.DisplayNameFor(model => model.Procurement.Status)
