Add view to view and manage users of the system

--- a/ProcurementTracker/Pages/Shared/_Layout.cshtml
+++ b/ProcurementTracker/Pages/Shared/_Layout.cshtml
@@ -39,6 +39,8 @@
                         <a class="nav-link text-dark" asp-area="" asp-page="/Bids/Index"><i class="fas fa-box-open"></i> Bids</a>
                         <div class="break" />
                         <a class="nav-link text-dark" asp-area="" asp-page="/Suppliers/Index"><i class="fas fa-shipping-fast"></i> Service Providers</a>
+                        <div class="break" />
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Users/Index"><i class="fas fa-users-cog"></i> Users Management</a>
                     </nav>
                 </div>
                 <div class="col-10">
