--- a/ProcurementTracker/Pages/Procurements/Index.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Index.cshtml
@@ -5,98 +5,97 @@
 	ViewData["Title"] = "Procurements";
 }
 
-<h3>
-	Procurements</h1>
-	<hr />
+<h3>Procurements</h3>
+<hr />
 
-	<p>
-		<a asp-page="Create" class="btn btn-light btn-outline-secondary"><i class="fas fa-plus-square"></i> Add Procurement</a>
-	</p>
-	<div class="card bg-light mb-2 h-20">
-		<div class="card-body">
-			<form method="post">
-				<div class="form-row">
-					<div class="form-group col-12">
-						<label><small>Search</small></label>
-						<input type="text" class="form-control form-control-sm" value="@Model.SearchText" name="SearchText" placeholder="Enter search keywords...">
-					</div>
+<p>
+	<a asp-page="Create" class="btn btn-light btn-outline-secondary"><i class="fas fa-plus-square"></i> Add Procurement</a>
+</p>
+<div class="card bg-light mb-2 h-20">
+	<div class="card-body">
+		<form method="post">
+			<div class="form-row">
+				<div class="form-group col-12">
+					<label><small>Search</small></label>
+					<input type="text" class="form-control form-control-sm" value="@Model.SearchText" name="SearchText" placeholder="Enter search keywords...">
 				</div>
-				<div class="form-row">
-					<div class="form-group col-4">
-						<label><small>Plan</small></label>
-						<select asp-for="Plan" class="form-control form-control-sm">
-							<option selected>Choose...</option>
-							<option>BUDGET</option>
-							<option>PROCUREMENT PLAN</option>
-						</select>
-					</div>
-					<div class="form-group col-4">
-						<label><small>Procurement Method</small></label>
-						<select asp-for="ProcurementMethod" value="@Model.ProcurementMethod" class="form-control form-control-sm" asp-items="@Model.ProcurementMethods">
-							<option selected>Choose...</option>
-						</select>
-					</div>
-					<div class="form-group col-4">
-						<label><small>Status</small></label>
-						<select asp-for="ProcurementStatus" value="@Model.ProcurementStatus" class="form-control form-control-sm" asp-items="@Model.ProcurementStatuses">
-							<option selected>Choose...</option>
-						</select>
-					</div>
+			</div>
+			<div class="form-row">
+				<div class="form-group col-4">
+					<label><small>Plan</small></label>
+					<select asp-for="Plan" class="form-control form-control-sm">
+						<option selected>Choose...</option>
+						<option>BUDGET</option>
+						<option>PROCUREMENT PLAN</option>
+					</select>
 				</div>
-				<button asp-page-handler="search" class="btn btn-primary btn-sm">Search</button>
-				<button asp-page-handler="clear" class="btn btn-light btn-sm">Clear</button>
-			</form>
-		</div>
+				<div class="form-group col-4">
+					<label><small>Procurement Method</small></label>
+					<select asp-for="ProcurementMethod" value="@Model.ProcurementMethod" class="form-control form-control-sm" asp-items="@Model.ProcurementMethods">
+						<option selected>Choose...</option>
+					</select>
+				</div>
+				<div class="form-group col-4">
+					<label><small>Status</small></label>
+					<select asp-for="ProcurementStatus" value="@Model.ProcurementStatus" class="form-control form-control-sm" asp-items="@Model.ProcurementStatuses">
+						<option selected>Choose...</option>
+					</select>
+				</div>
+			</div>
+			<button asp-page-handler="search" class="btn btn-primary btn-sm">Search</button>
+			<button asp-page-handler="clear" class="btn btn-light btn-sm">Clear</button>
+		</form>
 	</div>
-	<table class="table table-sm table-striped table-bordered">
-		<thead>
+</div>
+<table class="table table-sm table-striped table-bordered">
+	<thead>
+		<tr>
+			<th>
+				@Html.DisplayNameFor(model => model.Procurement[0].Subject)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Procurement[0].Status)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Procurement[0].EstimatedAmount)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Procurement[0].ProcurementMethod)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Procurement[0].IsPlanned)
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		@if (Model.Procurement == null)
+		{
 			<tr>
-				<th>
-					@Html.DisplayNameFor(model => model.Procurement[0].Subject)
-				</th>
-				<th>
-					@Html.DisplayNameFor(model => model.Procurement[0].Status)
-				</th>
-				<th>
-					@Html.DisplayNameFor(model => model.Procurement[0].EstimatedAmount)
-				</th>
-				<th>
-					@Html.DisplayNameFor(model => model.Procurement[0].ProcurementMethod)
-				</th>
-				<th>
-					@Html.DisplayNameFor(model => model.Procurement[0].IsPlanned)
-				</th>
+				<td colspan="5"><p class="lead">Enter keyword to search for procurement</p></td>
 			</tr>
-		</thead>
-		<tbody>
-			@if (Model.Procurement == null)
+		}
+		else
+		{
+			@foreach (var item in Model.Procurement)
 			{
 				<tr>
-					<td colspan="5"><p class="lead">Enter keyword to search for procurement</p></td>
+					<td>
+						<a asp-page="./Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Subject)</a>
+					</td>
+					<td class="bg-@item.StatusColorCode text-@item.StatusTextColorCode">
+						@Html.DisplayFor(modelItem => item.Status)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.Currency) @Html.DisplayFor(modelItem => item.EstimatedAmount)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.ProcurementMethod)
+					</td>
+					<td>
+						@Model.DisplayProcurementPlan(item.IsPlanned)
+					</td>
 				</tr>
 			}
-			else
-			{
-				@foreach (var item in Model.Procurement)
-				{
-					<tr>
-						<td>
-							<a asp-page="./Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Subject)</a>
-						</td>
-						<td class="bg-@item.StatusColorCode text-@item.StatusTextColorCode">
-							@Html.DisplayFor(modelItem => item.Status)
-						</td>
-						<td>
-							@Html.DisplayFor(modelItem => item.Currency) @Html.DisplayFor(modelItem => item.EstimatedAmount)
-						</td>
-						<td>
-							@Html.DisplayFor(modelItem => item.ProcurementMethod)
-						</td>
-						<td>
-							@Model.DisplayProcurementPlan(item.IsPlanned)
-						</td>
-					</tr>
-				}
-			}
-		</tbody>
-	</table>
+		}
+	</tbody>
+</table>
