--- a/ProcurementTracker/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/ProcurementTracker/Areas/Identity/Pages/Account/Logout.cshtml
@@ -5,7 +5,7 @@
 }
 
 <header>
-    <h1>@ViewData["Title"]</h1>
+    <h1>Session Ended</h1>
     @{
         if (User.Identity.IsAuthenticated)
         {
