--- a/ProcurementTracker/Pages/Bids/Delete.cshtml
+++ b/ProcurementTracker/Pages/Bids/Delete.cshtml
@@ -24,12 +24,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Bid.Submitted)
         </dd>
-        <dt class="col-sm-2">
+        @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Bid.ValidPeriod)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Bid.ValidPeriod)
-        </dd>
+        </dd>*@
     </dl>
     
     <form method="post">
