--- a/ProcurementTracker/Pages/Bids/Edit.cshtml
+++ b/ProcurementTracker/Pages/Bids/Edit.cshtml
@@ -52,11 +52,11 @@
                 <input asp-for="Bid.QuotedFee" class="form-control" />
                 <span asp-validation-for="Bid.QuotedFee" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Bid.ValidPeriod" class="control-label"></label>
                 <input asp-for="Bid.ValidPeriod" class="form-control" />
                 <span asp-validation-for="Bid.ValidPeriod" class="text-danger"></span>
-            </div>
+            </div*@>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
