Change the users management link

--- a/ProcurementTracker/Pages/Shared/_Layout.cshtml
+++ b/ProcurementTracker/Pages/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         <div class="break" />
                         <a class="nav-link text-dark" asp-area="" asp-page="/Suppliers/Index"><i class="fas fa-shipping-fast"></i> Service Providers</a>
                         <div class="break" />
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Users/Index"><i class="fas fa-users-cog"></i> Users Management</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Users/Index"><i class="fas fa-users-cog"></i> Users</a>
                     </nav>
                 </div>
                 <div class="col-10">
