Add firstname, lastname to the IdentityUser model

--- a/ProcurementTracker/Pages/_ViewImports.cshtml
+++ b/ProcurementTracker/Pages/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using ProcurementTracker
 @using ProcurementTracker.Data
 @using ProcurementTracker.Shared
+@using ProcurementTracker.Models
 @namespace ProcurementTracker.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
