--- a/ProcurementTracker/Pages/Bids/Details.cshtml
+++ b/ProcurementTracker/Pages/Bids/Details.cshtml
@@ -2,47 +2,77 @@
 @model ProcurementTracker.Pages.Bids.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+	ViewData["Title"] = "Details";
 }
 
 <h1>Bid Details</h1>
 <h4>Procurement: @Model.Bid.Procurement.Description</h4>
 
-<partial name="Bids/ActionBar/_BidDetailsActionBar" /><br />
+<partial name="Bids/ActionBar/_BidDetailsActionBar" />
+<br />
+
+<section>
+	<div class="row pb-1">
+		<div class="col offset-3">
+			<h1>
+				<a asp-page="/Suppliers/Details" asp-route-id="@Model.Bid.Supplier.Id">
+					@Html.DisplayFor(model => model.Bid.Supplier.Name)
+				</a>
+			</h1>
+		</div>
+	</div>
+	<div class="row pb-1">
+		<div class="col-3 text-right">
+			<strong>@Html.DisplayNameFor(model => model.Bid.QuotedFee)</strong>
+		</div>
+		<div class="col-3">
+			@{ var currency = Model.Bid.Currency != null ? Model.Bid.Currency : Currency.UGANDA_SHILLING.Value; }
+			@currency @Html.DisplayFor(model => model.Bid.QuotedFee)
+		</div>
+		<div class="col-3 text-right">
+			<strong>@Html.DisplayNameFor(model => model.Bid.Status)</strong>
+		</div>
+		<div class="col-3">
+			<span class="badge bg-@Model.Bid.StatusColorCode text-white">@Html.DisplayFor(model => model.Bid.Status)</span>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-3 text-right">
+			<strong>@Html.DisplayNameFor(model => model.Bid.Submitted)</strong>
+		</div>
+		<div class="col-3">
+			@Html.DisplayFor(model => model.Bid.Submitted)
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-3 text-right">
+			<strong>@Html.DisplayNameFor(model => model.Bid.BidValidityExpiryDate)</strong>
+		</div>
+		<div class="col-3">
+			@Html.DisplayFor(model => model.Bid.BidValidityExpiryDate)
+		</div>
+		<div class="col-3 text-right">
+			<strong>@Html.DisplayNameFor(model => model.Bid.BidSecurityExpiryDate)</strong>
+		</div>
+		<div class="col-3">
+			@Html.DisplayFor(model => model.Bid.BidSecurityExpiryDate)
+		</div>
+	</div>
+</section>
 
 <div>
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Bid.Supplier.Name)
-        </dt>
-        <dd class="col-sm-10">
-            <a asp-page="/Suppliers/Details" asp-route-id="@Model.Bid.Supplier.Id">
-                @Html.DisplayFor(model => model.Bid.Supplier.Name)
-            </a>
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Bid.QuotedFee)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Bid.QuotedFee)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Bid.Status)
-        </dt>
-        <dd class="col-sm-10">
-            <span class="badge bg-@Model.Bid.StatusColorCode text-white">@Html.DisplayFor(model => model.Bid.Status)</span>
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Bid.Submitted)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Bid.Submitted)
-        </dd>
-        @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Bid.ValidPeriod)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Bid.ValidPeriod)
-        </dd>*@
-    </dl>
+	<dl class="row">
+		<dt class="col-sm-2">
+
+		</dt>
+		<dd class="col-sm-4">
+
+		</dd>
+		@*<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Bid.ValidPeriod)
+			</dt>
+			<dd class="col-sm-10">
+			@Html.DisplayFor(model => model.Bid.ValidPeriod)
+			</dd>*@
+	</dl>
 </div>
