--- a/ProcurementTracker/Pages/Shared/Bids/ActionBar/_BidDetailsActionBar.cshtml
+++ b/ProcurementTracker/Pages/Shared/Bids/ActionBar/_BidDetailsActionBar.cshtml
@@ -4,20 +4,22 @@
 
     var procurementsRouteData = new Dictionary<string, string>();
 
+    <hr />
+
     if (Model.HasProcurementFilter)
     {
         procurementsRouteData.Add("procurementid", @Model.Bid.Procurement.Id.ToString());
+        <p>
+            <a asp-page="./Index" asp-all-route-data="@procurementsRouteData" class="btn btn-light btn-outline-secondary"><i
+                class="fas fa-angle-left"></i> Back to Procurement Bids</a>
+            &nbsp;
+            <a asp-page="./Edit" asp-route-id="@Model.Bid.Id" asp-route-procurementid="@Model.Bid.Procurement.Id"
+        class="btn btn-light btn-outline-secondary @(Model.HideEditButton ? "disabled" : null)"><i
+                class="fas fa-edit"></i> Edit</a>
+            &nbsp;
+        </p>
 
         <div class="row action-bar">
-            <a asp-page="./Index"
-               asp-all-route-data="@procurementsRouteData"
-               class="btn btn-light btn-outline-secondary"><i class="fas fa-angle-left"></i> Back to Procurement Bids</a>
-           &nbsp;
-            <a asp-page="./Edit"
-               asp-route-id="@Model.Bid.Id"
-               asp-route-procurementid="@Model.Bid.Procurement.Id"
-               class="btn btn-light btn-outline-secondary @(Model.HideEditButton ? "disabled" : null)"><i class="fas fa-edit"></i> Edit</a>
-            &nbsp;
             <form asp-page-handler="openbid" method="post" hidden="@Model.HideOpenBidButton">
                 <input type="hidden" id="id" name="id" value="@Model.Bid.Id" />
                 <button class="btn btn-primary">Open Bid</button>&nbsp;
@@ -35,23 +37,19 @@
                 <button class="btn btn-success">Accept Bid</button>&nbsp;
             </form>
             &nbsp;
-            @if(@Model.Bid.Status != BidStatus.ACCEPTED.ToString())
+            @if (@Model.Bid.Status != BidStatus.ACCEPTED.ToString())
             {
-                <a asp-page="./Reject"
-                   asp-route-id="@Model.Bid.Id"
-                   class="btn btn-danger"><i class="fas fa-edit"></i> Reject</a>
+                <a asp-page="./Reject" asp-route-id="@Model.Bid.Id" class="btn btn-danger"><i class="fas fa-edit"></i> Reject</a>
             }
         </div>
     }
     else
     {
         <p>
-            <a asp-page="./Index"
-               class="btn btn-light btn-outline-secondary"><i class="fas fa-angle-left"></i> Back to Bids</a>
+            <a asp-page="./Index" class="btn btn-light btn-outline-secondary"><i class="fas fa-angle-left"></i> Back to Bids</a>
 
-            <a asp-page="./Edit"
-               asp-route-id="@Model.Bid.Id"
-               class="btn btn-light btn-outline-secondary"><i class="fas fa-edit"></i> Edit</a>
+            <a asp-page="./Edit" asp-route-id="@Model.Bid.Id" class="btn btn-light btn-outline-secondary"><i
+                class="fas fa-edit"></i> Edit</a>
         </p>
     }
 }
