Rename link to manage user profile

--- a/ProcurementTracker/Pages/Users/Index.cshtml
+++ b/ProcurementTracker/Pages/Users/Index.cshtml
@@ -47,7 +47,7 @@
                         @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td class="col-1">
-                        <a class="text-dark" asp-area="Identity" asp-page="/Account/Manage/Index">View <i class="fas fa-clipboard-list"></i></a>
+                        <a class="text-dark" asp-area="Identity" asp-page="/Account/Manage/Index">Manage <i class="fas fa-clipboard-list"></i></a>
                     </td>
                 </tr>
             }
