List, view and update roles

--- a/ProcurementTracker/Pages/Admin/Index.cshtml
+++ b/ProcurementTracker/Pages/Admin/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="card">
             <div class="card-body">
                 <div class="card-body">
-                    <h5 class="card-title">Users</h5>
+                    <h5 class="card-title"><i class="fas fa-users"></i> Users</h5>
                     <p class="card-text">List, view and update the users of the application. Click on the link below
                         to view and manage the users of the system.</p>
                     <a asp-page="/Users/Index" class="btn btn-primary">View users</a>
@@ -25,10 +25,10 @@
         <div class="card">
             <div class="card-body">
                 <div class="card-body">
-                    <h5 class="card-title">Roles</h5>
+                    <h5 class="card-title"><i class="fas fa-user-tag"></i> Roles</h5>
                     <p class="card-text">List, view and update the users of the roles. Click on the link below
                         to view and manage the roles of the system.</p>
-                    <a href="#" class="btn btn-primary">View roles</a>
+                    <a asp-page="/Roles/Index" class="btn btn-primary">View roles</a>
                 </div>
             </div>
         </div>
