--- a/ProcurementTracker/Pages/Users/Index.cshtml
+++ b/ProcurementTracker/Pages/Users/Index.cshtml
@@ -7,7 +7,7 @@
 <h3>Users</h3>
 <hr />
 
-<a href="#" class="btn btn-primary">Add User</a>
+<a href="#" class="btn btn-dark">Add User</a>
 <br /><br />
 
 @if (Model.ApplicationUsers != null)
