--- a/ProcurementTracker/Pages/Roles/Details.cshtml
+++ b/ProcurementTracker/Pages/Roles/Details.cshtml
@@ -9,12 +9,12 @@
 <hr />
 
 <p>
-    <a asp-page="./Index" class="btn btn-outline-secondary btn-light"><i class="fas fa-angle-left"></i> Cancel</a>
+    <a asp-page="./Index" class="btn btn-outline-secondary btn-light"><i class="fas fa-angle-left"></i> Back</a>
 </p>
 
 <section>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col">
             <form method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input asp-for="Role.Id" type="hidden" />
@@ -23,10 +23,110 @@
 
                 <div class="form-group">
                     <label asp-for="Role.Name" class="control-label"></label>
-                    <input asp-for="Role.Name" class="form-control" />
+                    <input asp-for="Role.Name" class="form-control col-4" />
                     <span asp-validation-for="Role.Name" class="text-danger"></span>
                 </div>
-                
+
+                @if (Model.ProcurementActions != null)
+                {
+                    <h6>Permitted actions on procurements</h6>
+                    <hr />
+                    <div class="form-inline">
+                        @foreach (var applicationAction in Model.ProcurementActions)
+                        {
+                            var isChecked = applicationAction.ApplicationActionId != null && applicationAction.RoleId == Guid.Parse(Model.Role!.Id);
+                            <div class="form-check">
+                                <input 
+                                    type="checkbox"
+                                    value="@applicationAction.ApplicationAction?.Id"
+                                    name="SelectedActions"
+                                    checked=@isChecked />&nbsp;
+                                <label class="pr-3 pt-2 pb-2">@applicationAction.ApplicationAction?.Description</label>&nbsp;
+                            </div>
+                        }
+                    </div>
+                }
+
+                @if (Model.BidActions != null)
+                {
+                    <h6 class="pt-2">Permitted actions on bids</h6>
+                    <hr />
+                    <div class="form-inline">
+                        @foreach (var bidAction in Model.BidActions)
+                        {
+                            var isChecked = bidAction.ApplicationActionId != null && bidAction.RoleId == Guid.Parse(Model.Role!.Id);
+                            <div class="form-check">
+                                <input 
+                                    type="checkbox"
+                                    value="@bidAction.ApplicationAction?.Id"
+                                    name="SelectedActions"
+                                    checked=@isChecked />&nbsp;
+                                <label class="pr-3 pt-2 pb-2">@bidAction.ApplicationAction?.Description</label>&nbsp;
+                            </div>
+                        }
+                    </div>
+                }
+
+                @if (Model.SupplierActions != null)
+                {
+                    <h6 class="pt-2">Permitted actions on suppliers</h6>
+                    <hr />
+                    <div class="form-inline">
+                        @foreach (var supplierAction in Model.SupplierActions)
+                        {
+                            var isChecked = supplierAction.ApplicationActionId != null && supplierAction.RoleId == Guid.Parse(Model.Role!.Id);
+                            <div class="form-check">
+                                <input 
+                                    type="checkbox"
+                                    value="@supplierAction.ApplicationAction?.Id"
+                                    name="SelectedActions"
+                                    checked=@isChecked />&nbsp;
+                                <label class="pr-3 pt-2 pb-2">@supplierAction.ApplicationAction?.Description</label>&nbsp;
+                            </div>
+                        }
+                    </div>
+                }
+
+                @if (Model.UserActions != null)
+                {
+                    <h6 class="pt-2">Permitted actions on users</h6>
+                    <hr />
+                    <div class="form-inline">
+                        @foreach (var userAction in Model.UserActions)
+                        {
+                            var isChecked = userAction.ApplicationActionId != null && userAction.RoleId == Guid.Parse(Model.Role!.Id);
+                            <div class="form-check">
+                                <input 
+                                    type="checkbox"
+                                    value="@userAction.ApplicationAction?.Id"
+                                    name="SelectedActions"
+                                    checked=@isChecked />&nbsp;
+                                <label class="pr-3 pt-2 pb-2">@userAction.ApplicationAction?.Description</label>&nbsp;
+                            </div>
+                        }
+                    </div>
+                }
+
+                @if (Model.RoleActions != null)
+                {
+                    <h6 class="pt-2">Permitted actions on roles</h6>
+                    <hr />
+                    <div class="form-inline">
+                        @foreach (var roleAction in Model.RoleActions)
+                        {
+                            var isChecked = roleAction.ApplicationActionId != null && roleAction.RoleId == Guid.Parse(Model.Role!.Id);
+                            <div class="form-check">
+                                <input 
+                                    type="checkbox"
+                                    value="@roleAction.ApplicationAction?.Id"
+                                    name="SelectedActions"
+                                    checked=@isChecked />&nbsp;
+                                <label class="pr-3 pt-2 pb-2">@roleAction.ApplicationAction?.Description</label>&nbsp;
+                            </div>
+                        }
+                    </div>
+                }
+
                 <div class="form-group">
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
