--- a/ProcurementTracker/Pages/Shared/_LoginPartial.cshtml
+++ b/ProcurementTracker/Pages/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     if(username != null)
     {
         var user = await UserManager.FindByNameAsync(username);
-        fullname = $"{user.Firstname} {user.Lastname}!";
+        fullname = $"{user?.Firstname} {user?.Lastname}!";
     }
 }
 
@@ -28,9 +28,6 @@
     }
     else
     {
-        @*<li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-            </li>*@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
         </li>
