--- a/ProcurementTracker/Pages/Users/Index.cshtml
+++ b/ProcurementTracker/Pages/Users/Index.cshtml
@@ -7,7 +7,7 @@
 <h3>Users</h3>
 <hr />
 
-<a href="#" class="btn btn-dark">Add User</a>
+<a asp-area="Identity" asp-page="/Account/Register" class="btn btn-light btn-outline-secondary"><i class="fas fa-plus-square"></i> Add User</a>
 <br /><br />
 
 @if (Model.ApplicationUsers != null)
