--- a/ProcurementTracker/Areas/Identity/Pages/Account/_ViewImports.cshtml
+++ b/ProcurementTracker/Areas/Identity/Pages/Account/_ViewImports.cshtml
@@ -1,1 +1,5 @@
 ﻿@using ProcurementTracker.Areas.Identity.Pages.Account
+@using ProcurementTracker
+@using ProcurementTracker.Data
+@using ProcurementTracker.Shared
+@using ProcurementTracker.Models
