--- a/ProcurementTracker/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ProcurementTracker/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,6 +13,11 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Input.UserName"></label>
+                <input asp-for="Input.UserName" class="form-control" />
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.Firstname"></label>
                 <input asp-for="Input.Firstname" class="form-control" />
                 <span asp-validation-for="Input.Firstname" class="text-danger"></span>
